--- a/Wedding Page/src/styles/main.css
+++ b/Wedding Page/src/styles/main.css
@@ -5,6 +5,8 @@
 
 .main-title{
     font-family: "Antro Vectra";
+    font-weight: bold;
+    font-size: 32px;
 }
 
 
@@ -105,6 +107,30 @@ footer {
     margin-left: auto;
     margin-right: auto;
 }
+
+/*  ---------------Google MAPーーーーーーーーーーーーーーーーーーー*/
+
+.map-container {
+    position: relative;
+    width: 90vw; /* 画面サイズの90% */
+    max-width: 1000px; /* または適切な最大幅 */
+    padding-top: 50%; /* 幅の50%、アスペクト比を保つ */
+    margin: auto;
+    margin-top: 20px;
+    overflow: hidden;
+}
+
+.map-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+}
+
+
+
 
 
 
@@ -313,7 +339,18 @@ nav a:hover {
     h3 {
         font-size: 18px;
     }
-    /* その他の要素に対するスタイルをここに追加 */
+
+    .main-title {
+        font-size: 22px;
+    }
+    /*  ---------------Google MAPーーーーーーーーーーーーーーーーーーー*/
+
+    .map-container {
+        width: 90vw; /* 画面サイズの90% */
+        max-width: 600px; /* または適切な最大幅 */
+        padding-top: 75%; /* 幅の50%、アスペクト比を保つ */
+    }
+
 }
 
 @keyframes slideUp {
@@ -358,27 +395,3 @@ nav a:hover {
     .reveal-on-scroll.revealed {
         opacity: 1;
     }
-
-/*  ---------------Google MAPーーーーーーーーーーーーーーーーーーー*/
-
-    .map-container {
-        position: relative;
-        width: 90vw; /* 画面サイズの90% */
-        max-width: 600px; /* または適切な最大幅 */
-        padding-top: 75%; /* 幅の50%、アスペクト比を保つ */
-        margin: auto;
-        margin-top: 20px;
-        overflow: hidden;
-    }
-
-    .map-container iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        border: none;
-    }
-
-
-
